--- a/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
@@ -19,18 +19,23 @@
     <div class="oj-dialog-body">
             <div class="oj-flex">
                 <div class="oj-flex-item">
-                    <img data-bind="attr: {src: getPhoto(basicEmpInfo().empId)}" class="empImg" />
+                   <div class="oj-flex">
+                         <img data-bind="attr: {src: getPhoto(basicEmpInfo().empId)}" class="empImgDialog" />
+                    </div>
+                      <div class="oj-flex">
+<!--                            <label for="status" class="oj-flex-item">STATUS </label>-->
+                            <span id="status" class="txtHighlight oj-flex-item" data-bind="text: basicEmpInfo().hireStatus"></span>
+                        </div>
                 </div>
 
                 <div class="oj-flex-item empInfo">
+<!--
                     <div class="oj-flex-item">
                         <label for="name">NAME</label>
                         <br /><span id="name" class="txtHighlight" data-bind="text: basicEmpInfo().firstName + ' ' + basicEmpInfo().lastName"></span>
                     </div>
-                    <div class="oj-flex-item">
-                        <label for="status">STATUS</label>
-                        <br /><span id="status" class="txtHighlight" data-bind="text: basicEmpInfo().hireStatus"></span>
-                    </div>
+-->
+
 
                     <div class="oj-flex-item">
                         <label for="homestore">HOME STORE</label>
@@ -153,7 +158,10 @@
                                     <hr/>
                                     <div data-bind="visible: (preferred === 'yes')" class="empAvailability">
                                         <div class="oj-flex">
-                                            <span class="oj-flex-item prefLabel">PREFERRED</span>
+                                            <span class="oj-flex-item prefLabel">
+                                                <i class="fa fa-calendar-o" aria-hidden="true"></i>
+                                                PREFERRED
+                                            </span>
                                         </div>
                                         <div class="oj-flex">
                                             <span data-bind="text: preferredtime" class="oj-flex-item"></span>
@@ -161,7 +169,10 @@
                                     </div>
                                     <div data-bind="visible: (unavailable === 'yes')" class="empAvailability">
                                         <div class="oj-flex">
-                                            <span class="notAvailLabel oj-flex-item">NOT AVAILABLE</span>
+                                            <span class="notAvailLabel oj-flex-item">
+                                                <i class="fa fa-calendar-o" aria-hidden="true"></i>
+                                                NOT AVAILABLE
+                                            </span>
                                         </div>
                                         <div class="oj-flex">
                                             <span data-bind="text: unavialbaletime" class="oj-flex-item"></span>
@@ -175,11 +186,15 @@
                                             <br /><span data-bind="text: address"> </span>
                                         </div>
                                         <div data-bind="foreach: workDetails;">
-                                            <div data-bind=" style: { 'border-color': backgroundcolor}" class="jobSection">
-                                                <span data-bind="text: jobtitle" class="locLabel"> </span>
-                                                <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : workStation)"> </span>
-                                                <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : time)"> </span>
-                                                <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : (hours + ' hours'))"> </span>
+                                            <div data-bind=" style: { 'border-color': backgroundcolor}" class="jobSection oj-flex">
+                                                <!--Notes to Dev: Would be good to have class name in json for each job-->
+                                                <span data-bind="css: jobtitle" class="oj-flex-item"></span>
+                                                <span class="oj-flex-item">
+                                                    <span data-bind="text: jobtitle" class="locLabel"> </span>
+                                                    <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : workStation)"> </span>
+                                                    <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : time)"> </span>
+                                                    <br /><span data-bind="text: (jobtitle === 'Not Scheduled' ? '' : (hours + ' hours'))"> </span>
+                                                </span>
                                             </div>
                                         </div>
                                         <br />
