--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -383,7 +383,11 @@ h1.pageTitle{
     }
     #offCanvasScope{
         height:225px;
-
+        #vtabs{
+            .fa{
+                font-size:16px;
+            }
+        }
         .analyticsWrapper{
             //background-color: $topOffCanvasAnalyticsBckgColor;
             display:inline-block;
